--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container">
-                <a class="navbar-brand" href="#">ČBB</a>
+                <a class="navbar-brand" href="#">Stranka</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="bi bi-three-dots-vertical"></i>
                 </button>
